--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -81,7 +81,7 @@ argo-cd:
         p, role:none, *, *, */*, deny
         #g, wheel, role:admin
         # workaround until fix DN in dex (see LDAP config part)
-        g, pando855@gmail.com, role:admin
+        g, daniel.boluda.fdez@gmail.com, role:admin
 
       scopes: "[groups, email]"
 
