--- a/metal/roles/setup/tasks/main.yml
+++ b/metal/roles/setup/tasks/main.yml
@@ -42,7 +42,7 @@
   lineinfile:
     path: /etc/smartd.conf
     regexp: '^DEVICESCAN'
-    line: DEVICESCAN -H -M once -m pando855@gmail.com -n standby,10,q
+    line: DEVICESCAN -H -M once -m daniel.boluda.fdez@gmail.com -n standby,10,q
   tags:
     - setup
 
