--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -76,14 +76,17 @@ ingress-nginx:
       enabled: true
 
       annotations:
-        # Cilium v1.16+
-        lbipam.cilium.io/ips: "192.168.193.1"
-        # Cilium v1.15
-        io.cilium/lb-ipam-ips: "192.168.193.1"
-      loadBalancerClass: "io.cilium/bgp-control-plane"
-      externalTrafficPolicy: Local
+        metallb.universe.tf/loadBalancerIPs: "192.168.193.1"
+      labels: {}
+
+      ## List of IP addresses at which the controller services are available
+      ## Ref: https://kubernetes.io/docs/user-guide/services/#external-ips
+      ##
+      externalIPs: []
+
       enableHttp: true
       enableHttps: true
+
       ports:
         http: 80
         https: 443
@@ -93,8 +96,17 @@ ingress-nginx:
         https: https
 
       type: LoadBalancer
+
+      ## Enables an additional internal load balancer (besides the external one).
+      ## Annotations are mandatory for the load balancer to come up. Varies with the cloud service.
       internal:
         enabled: false
+        annotations: {}
+
+        ## Set external traffic policy to: "Local" to preserve source IP on
+        ## providers supporting it
+        ## Ref: https://kubernetes.io/docs/tutorials/services/source-ip/#source-ip-for-services-with-typeloadbalancer
+        # externalTrafficPolicy: ""
 
     extraVolumeMounts:
       - name: dshm
@@ -106,13 +118,6 @@ ingress-nginx:
           medium: Memory
           # not working until v1.21? https://github.com/kubernetes/kubernetes/issues/63126
           sizeLimit: 303Mi
-
-    metrics:
-      enabled: true
-      serviceMonitor:
-        enabled: true
-        additionalLabels:
-          release: monitoring
 
   tcp:
     29518: git/git-gitea-ssh:22
