--- a/system/external-dns/values.yaml
+++ b/system/external-dns/values.yaml
@@ -17,9 +17,9 @@ external-dns:
     - service
     - ingress
   domainFilters:
-    - grigri.cloud
+    - dabol.cloud
   serviceMonitor:
-    enabled: true
+    enabled: false
     additionalLabels:
       release: monitoring
   resources:
