--- a/bootstrap/argocd/templates/ingress-external.yaml
+++ b/bootstrap/argocd/templates/ingress-external.yaml
@@ -3,13 +3,13 @@ kind: Ingress
 metadata:
   annotations:
     external-dns.alpha.kubernetes.io/enabled: "true"
-    external-dns.alpha.kubernetes.io/target: grigri.cloud
+    external-dns.alpha.kubernetes.io/target: dabol.cloud
     cert-manager.io/cluster-issuer: letsencrypt-prod-dns
   name: argocd-external
 spec:
   ingressClassName: nginx-external
   rules:
-  - host: &host argocd.grigri.cloud
+  - host: &host argocd.dabol.cloud
     http:
       paths:
       - backend:
