Update CreateSecret in Argocd

--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -57,7 +57,7 @@ argo-cd:
       scopes: "[groups, email]"
 
     secret:
-      createSecret: true
+      createSecret: false
 
   server:
     resources:
