Include initial admin secrets for argo

--- a/bootstrap/argocd/templates/argocd-initial-admin-secret.yaml
+++ b/bootstrap/argocd/templates/argocd-initial-admin-secret.yaml
@@ -1,15 +1,15 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: argocd-adminpassword
+  name: argocd-initial-admin-secret
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: vault
   target:
-    name: argocd-adminpassword
+    name: argocd-initial-admin-secret
   data:
     - secretKey: server.secretkey
       remoteRef:
-        key: /argocd/admin-password
+        key: /argocd/argocd-initial-admin-secret
         property: token
