--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -29,6 +29,10 @@ argo-cd:
         end
         return hs
 
+      # -- Enable local admin user
+      ## Ref: https://argo-cd.readthedocs.io/en/latest/faq/#how-to-disable-admin-user
+      admin.enabled: true
+
       kustomize.buildOptions: --enable-helm
 
     params:
@@ -58,15 +62,11 @@ argo-cd:
 
     secret:
       createSecret: false
-
-      # -- Enable local admin user
-      ## Ref: https://argo-cd.readthedocs.io/en/latest/faq/#how-to-disable-admin-user
-      admin.enabled: true
-
       # -- Bcrypt hashed admin password
       ## Argo expects the password in the secret to be bcrypt hashed. You can create this hash with
       ## `htpasswd -nbBC 10 "" $ARGO_PWD | tr -d ':\n' | sed 's/$2y/$2a/'`
       argocdServerAdminPassword: "$2a$10$r/vG9lW729l6en1LL.L6HOYg87KnO.P6bKiylumbde6iE5YxQ1i3a"
+      argocdServerAdminPasswordMtime: "2024-04-15T15:04:05Z"
 
 
   server:
