Modify argocd-secret based on https://argo-cd.readthedocs.io/en/stable/operator-manual/argocd-secret-yaml/

--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -29,10 +29,6 @@ argo-cd:
         end
         return hs
 
-      # -- Enable local admin user
-      ## Ref: https://argo-cd.readthedocs.io/en/latest/faq/#how-to-disable-admin-user
-      admin.enabled: true
-
       kustomize.buildOptions: --enable-helm
 
     params:
@@ -61,12 +57,11 @@ argo-cd:
       scopes: "[groups, email]"
 
     secret:
-      createSecret: false
-      # -- Bcrypt hashed admin password
-      ## Argo expects the password in the secret to be bcrypt hashed. You can create this hash with
-      ## `htpasswd -nbBC 10 "" $ARGO_PWD | tr -d ':\n' | sed 's/$2y/$2a/'`
-      argocdServerAdminPassword: "$2a$10$r/vG9lW729l6en1LL.L6HOYg87KnO.P6bKiylumbde6iE5YxQ1i3a"
-      argocdServerAdminPasswordMtime: "2024-04-15T15:04:05Z"
+      createSecret: true
+
+      # -- Enable local admin user
+      ## Ref: https://argo-cd.readthedocs.io/en/latest/faq/#how-to-disable-admin-user
+      admin.enabled: true
 
 
   server:
