--- a/bootstrap/argocd/templates/argocd-secret.yaml
+++ b/bootstrap/argocd/templates/argocd-secret.yaml
@@ -13,3 +13,11 @@ spec:
       remoteRef:
         key: /argocd/secret-key
         property: token
+    - secretKey: admin.password
+      remoteRef:
+        key: /argocd/admin-password
+        property: admin.password
+    - secretKey: admin.passwordMtime
+      remoteRef:
+        key: /argocd/admin-password-mtime
+        property: admin.passwordMtime
