Correct Argocd argocd-initial-admin-secret

--- a/bootstrap/argocd/templates/argocd-initial-admin-secret.yaml
+++ b/bootstrap/argocd/templates/argocd-initial-admin-secret.yaml
@@ -1,15 +1,15 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: argocd-secret
+  name: argocd-initial-admin-secret
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: vault
   target:
-    name: argocd-secret
+    name: argocd-initial-admin-secret
   data:
-    - secretKey: server.secretkey
+    - secretKey: password
       remoteRef:
-        key: /argocd/secret-key
-        property: token
+        key: /argocd/argocd-initial-admin-secret
+        property: password
