--- a/bootstrap/argocd/values.yaml
+++ b/bootstrap/argocd/values.yaml
@@ -57,11 +57,7 @@ argo-cd:
       scopes: "[groups, email]"
 
     secret:
-      createSecret: true
-
-      # -- Enable local admin user
-      ## Ref: https://argo-cd.readthedocs.io/en/latest/faq/#how-to-disable-admin-user
-      admin.enabled: true
+      createSecret: false
 
 
   server:
