--- a/bootstrap/argocd/templates/argocd-secret.yaml
+++ b/bootstrap/argocd/templates/argocd-secret.yaml
@@ -13,3 +13,11 @@ spec:
       remoteRef:
         key: /argocd/secret-key
         property: token
+    - secretKey: oidc.kanidm.clientID
+      remoteRef:
+        key: /argocd/oidc-client
+        property: client_id
+    - secretKey: oidc.kanidm.clientSecret
+      remoteRef:
+        key: /argocd/oidc-client
+        property: client_secret
