--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -50,8 +50,8 @@ app-template:
           tls_chain = "/data/tls/tls.crt"
           tls_key = "/data/tls/tls.key"
           log_level = "info"
-          domain = "idm.grigri.cloud"
-          origin = "https://idm.grigri.cloud"
+          domain = "idm.dbcloud.org"
+          origin = "https://idm.dbcloud.org"
           role = "WriteReplica"
           [online_backup]
           path = "/data/kanidm/backups/"
@@ -73,7 +73,7 @@ app-template:
         # Cilium v1.15
         io.cilium/lb-ipam-ips: "192.168.193.8"
         external-dns.alpha.kubernetes.io/enabled: "true"
-        external-dns.alpha.kubernetes.io/hostname: ldaps.idm.internal.grigri.cloud
+        external-dns.alpha.kubernetes.io/hostname: ldaps.idm.internal.dbcloud.org
       externalTrafficPolicy: Local
       ports:
         ldaps:
@@ -87,11 +87,11 @@ app-template:
       className: nginx-external
       annotations:
         external-dns.alpha.kubernetes.io/enabled: "true"
-        external-dns.alpha.kubernetes.io/target: grigri.cloud
+        external-dns.alpha.kubernetes.io/target: dbcloud.org
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
         nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
       hosts:
-        - host: &host idm.grigri.cloud
+        - host: &host idm.dbcloud.org
           paths:
             - path: /
               pathType: Prefix
@@ -101,7 +101,7 @@ app-template:
       tls:
         - hosts:
             - *host
-            - ldaps.idm.internal.grigri.cloud
+            - ldaps.idm.internal.dbcloud.org
           secretName: idm-external-tls-certificate
 
   defaultPodOptions:
