--- a/system/metallb-system/templates/ipaddresspool.yaml
+++ b/system/metallb-system/templates/ipaddresspool.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: metallb-system
 spec:
   addresses:
-    - 192.168.1.240/29
+    - 192.168.1.240-192.168.1.244  # Specify the range of IP addresses
