Onboard dabol-fractal

--- a/metal/inventory/hosts.ini
+++ b/metal/inventory/hosts.ini
@@ -1,5 +1,5 @@
 [kube_control_plane]
-dabol-gl752vw ansible_host=192.168.1.245  #DABOL-GL752VW
+dabol-fractal ansible_host=192.168.1.248  #DABOL-fractal
 
 [kube_node:children]
 
@@ -16,7 +16,7 @@ dabol-gl752vw ansible_host=192.168.1.245  #DABOL-GL752VW
 [odroid_hc4]
 
 [nvidia]
-dabol-gl752vw
+dabol-fractal
 
 [k3s_cluster:children]
 kube_control_plane
