--- a/metal/playbooks/install/backup-etcd.yml
+++ b/metal/playbooks/install/backup-etcd.yml
@@ -1,5 +1,5 @@
 - name: Enable etcd backup
-  hosts: dabol-gl752vw
+  hosts: dabol-fractal
   tasks:
     - name: Check dependencies
       ansible.builtin.apt:
