--- a/bootstrap/argocd/templates/argocd-secret.yaml
+++ b/bootstrap/argocd/templates/argocd-secret.yaml
@@ -9,15 +9,15 @@ spec:
   target:
     name: argocd-secret
   data:
-    - secretKey: server.secretkey
-      remoteRef:
-        key: /argocd/secret-key
-        property: token
-    - secretKey: oidc.kanidm.clientID
-      remoteRef:
-        key: /argocd/oidc-client
-        property: client_id
-    - secretKey: oidc.kanidm.clientSecret
-      remoteRef:
-        key: /argocd/oidc-client
-        property: client_secret
+    #- secretKey: server.secretkey
+    #  remoteRef:
+    #    key: /argocd/secret-key
+    #    property: token
+    #- secretKey: oidc.kanidm.clientID
+    #  remoteRef:
+    #    key: /argocd/oidc-client
+    #    property: client_id
+    #- secretKey: oidc.kanidm.clientSecret
+    #  remoteRef:
+    #    key: /argocd/oidc-client
+    #    property: client_secret
