--- a/system/metallb-system/values.yaml
+++ b/system/metallb-system/values.yaml
@@ -15,6 +15,8 @@ metallb:
       timeoutSeconds: 5
 
   speaker:
+    # -- Speaker log level. Must be one of: `all`, `debug`, `info`, `warn`, `error` or `none`
+    logLevel: debug
     resources:
       requests:
         cpu: 20m
