--- a/system/ingress-nginx-external/values.yaml
+++ b/system/ingress-nginx-external/values.yaml
@@ -22,7 +22,7 @@ ingress-nginx:
       default: false
       controllerValue: "k8s.io/ingress-nginx-external"
 
-    ingressClass: nginx-external
+    ingressClass: nginx-internal
 
     resources:
       limits:
@@ -39,15 +39,15 @@ ingress-nginx:
       targetCPUUtilizationPercentage: 1250
       targetMemoryUtilizationPercentage: 200
     topologySpreadConstraints:
-      - maxSkew: 1
-        topologyKey: kubernetes.io/hostname
-        whenUnsatisfiable: DoNotSchedule
-        labelSelector:
-          matchLabels:
-            app.kubernetes.io/component: controller
-            app.kubernetes.io/instance: ingress-nginx-external
-            app.kubernetes.io/name: ingress-nginx
-    
+    - maxSkew: 1
+      topologyKey: kubernetes.io/hostname
+      whenUnsatisfiable: DoNotSchedule
+      labelSelector:
+        matchLabels:
+          app.kubernetes.io/component: controller
+          app.kubernetes.io/instance: ingress-nginx-external
+          app.kubernetes.io/name: ingress-nginx
+
     service:
       enabled: true
       annotations:
@@ -70,15 +70,15 @@ ingress-nginx:
         enabled: false
 
     extraVolumeMounts:
-      - name: dshm
-        mountPath: /dev/shm
+    - name: dshm
+      mountPath: /dev/shm
 
     extraVolumes:
-      - name: dshm
-        emptyDir:
-          medium: Memory
-          # not working until v1.21? https://github.com/kubernetes/kubernetes/issues/63126
-          sizeLimit: 303Mi
+    - name: dshm
+      emptyDir:
+        medium: Memory
+        # not working until v1.21? https://github.com/kubernetes/kubernetes/issues/63126
+        sizeLimit: 303Mi
 
     metrics:
       enabled: true
