--- a/system/ingress-nginx-external/values.yaml
+++ b/system/ingress-nginx-external/values.yaml
@@ -39,19 +39,21 @@ ingress-nginx:
       targetCPUUtilizationPercentage: 1250
       targetMemoryUtilizationPercentage: 200
     topologySpreadConstraints:
-      - maxSkew: 1
-        topologyKey: kubernetes.io/hostname
-        whenUnsatisfiable: DoNotSchedule
-        labelSelector:
-          matchLabels:
-            app.kubernetes.io/component: controller
-            app.kubernetes.io/instance: ingress-nginx-external
-            app.kubernetes.io/name: ingress-nginx
-    
+    - maxSkew: 1
+      topologyKey: kubernetes.io/hostname
+      whenUnsatisfiable: DoNotSchedule
+      labelSelector:
+        matchLabels:
+          app.kubernetes.io/component: controller
+          app.kubernetes.io/instance: ingress-nginx-external
+          app.kubernetes.io/name: ingress-nginx
+
     service:
       enabled: true
       annotations:
         metallb.universe.tf/loadBalancerIPs: "192.168.1.242"
+      labels: {}
+      externalIPs: []
 
       enableHttp: true
       enableHttps: true
@@ -68,21 +70,15 @@ ingress-nginx:
       externalTrafficPolicy: Local
       internal:
         enabled: false
+        annotations: {}
 
     extraVolumeMounts:
-      - name: dshm
-        mountPath: /dev/shm
+    - name: dshm
+      mountPath: /dev/shm
 
     extraVolumes:
-      - name: dshm
-        emptyDir:
-          medium: Memory
-          # not working until v1.21? https://github.com/kubernetes/kubernetes/issues/63126
-          sizeLimit: 303Mi
-
-    metrics:
-      enabled: true
-      serviceMonitor:
-        enabled: true
-        additionalLabels:
-          release: monitoring
+    - name: dshm
+      emptyDir:
+        medium: Memory
+        # not working until v1.21? https://github.com/kubernetes/kubernetes/issues/63126
+        sizeLimit: 303Mi
