--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -54,11 +54,11 @@ app-template:
             repository: debian
             tag: 12.5-slim
           command:
-            - /bin/sh
-            - -c
+          - /bin/sh
+          - -c
           args:
-            - >
-              cp -r /original/conf/* /conf/
+          - >
+            cp -r /original/conf/* /conf/
       containers:
         appdaemon:
           image:
@@ -66,11 +66,11 @@ app-template:
             tag: 4.4.2
           env:
             HA_URL: http://home-assistant-hass:8123
-            DASH_URL: https://appdaemon.grigri.cloud
+            DASH_URL: https://appdaemon.dbcloud.org
             TIMEZONE: Europe/Madrid
           envFrom:
-            - secretRef:
-                name: hass-appdaemon
+          - secretRef:
+              name: hass-appdaemon
           resources:
             requests:
               cpu: 30m
@@ -91,13 +91,13 @@ app-template:
         affinity: &affinity
           podAffinity:
             requiredDuringSchedulingIgnoredDuringExecution:
-              - labelSelector:
-                  matchExpressions:
-                    - key: app.kubernetes.io/name
-                      operator: In
-                      values:
-                        - home-assistant
-                topologyKey: kubernetes.io/hostname
+            - labelSelector:
+                matchExpressions:
+                - key: app.kubernetes.io/name
+                  operator: In
+                  values:
+                  - home-assistant
+              topologyKey: kubernetes.io/hostname
 
     whisper:
       type: deployment
@@ -110,12 +110,12 @@ app-template:
             repository: pando85/wyoming-whisper
             tag: 1.1.0
           args:
-            - --model
-            - medium-int8
-            - --language
-            - es
-            - --device
-            - cuda
+          - --model
+          - medium-int8
+          - --language
+          - es
+          - --device
+          - cuda
           resources:
             requests:
               cpu: 15m
@@ -141,9 +141,9 @@ app-template:
             repository: rhasspy/wyoming-piper
             tag: 1.5.0
           args:
-            - --voice
-            #- en_US-amy-medium
-            - es_ES-sharvard-medium
+          - --voice
+          #- en_US-amy-medium
+          - es_ES-sharvard-medium
           resources:
             requests:
               cpu: 15m
@@ -170,8 +170,8 @@ app-template:
             repository: rhasspy/wyoming-openwakeword
             tag: 1.10.0
           args:
-            - --preload-model
-            - alexa
+          - --preload-model
+          - alexa
           resources:
             requests:
               cpu: 15m
@@ -188,34 +188,6 @@ app-template:
                 periodSeconds: 5
       pod:
         affinity: *affinity
-
-    valetudopng:
-      annotations:
-        reloader.stakater.com/auto: "true"
-      type: deployment
-      replicas: 1
-      containers:
-        valetudopng:
-          image:
-            repository: ghcr.io/erkexzcx/valetudopng
-            tag: v1.0.17
-          args:
-            - -config
-            - /config/config.yml
-          resources:
-            requests:
-              cpu: 15m
-              memory: 15Mi
-          probes:
-            liveness:
-              enabled: true
-            readiness:
-              enabled: true
-            startup:
-              enabled: true
-              spec:
-                failureThreshold: 30
-                periodSeconds: 5
 
   defaultPodOptions:
     terminationGracePeriodSeconds: 1
@@ -264,59 +236,42 @@ app-template:
       className: nginx-external
       annotations:
         external-dns.alpha.kubernetes.io/enabled: "true"
-        external-dns.alpha.kubernetes.io/target: grigri.cloud
+        external-dns.alpha.kubernetes.io/target: dbcloud.org
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
       hosts:
-        - host: &host hass.grigri.cloud
-          paths:
-            - path: /
-              pathType: Prefix
-              service:
-                identifier: hass
-                port: http
+      - host: &host hass.dbcloud.org
+        paths:
+        - path: /
+          pathType: Prefix
+          service:
+            identifier: hass
+            port: http
       tls:
-        - hosts:
-            - *host
-          secretName: home-assistant-external-tls-certificate
+      - hosts:
+        - *host
+        secretName: home-assistant-external-tls-certificate
     appdaemon:
       enabled: true
       className: nginx-external
       annotations:
         external-dns.alpha.kubernetes.io/enabled: "true"
-        external-dns.alpha.kubernetes.io/target: grigri.cloud
+        external-dns.alpha.kubernetes.io/target: dbcloud.org
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
-        nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth
-        nginx.ingress.kubernetes.io/auth-signin: https://auth.grigri.cloud/oauth2/start
+        nginx.ingress.kubernetes.io/auth-url: https://auth.dbcloud.org/oauth2/auth
+        nginx.ingress.kubernetes.io/auth-signin: https://auth.dbcloud.org/oauth2/start
       hosts:
-        - host: &host appdaemon.grigri.cloud
-          paths:
-            - path: /
-              pathType: Prefix
-              service:
-                identifier: appdaemon
-                port: http
+      - host: &host appdaemon.dbcloud.org
+        paths:
+        - path: /
+          pathType: Prefix
+          service:
+            identifier: appdaemon
+            port: http
       tls:
-        - hosts:
-            - *host
-          secretName: hass-appdaemon-tls-certificate
-    valetudopng:
-      enabled: true
-      className: nginx-internal
-      annotations:
-        cert-manager.io/cluster-issuer: letsencrypt-prod-dns
-        external-dns.alpha.kubernetes.io/enabled: "true"
-      hosts:
-        - host: &host valetudopng.internal.grigri.cloud
-          paths:
-            - path: /
-              pathType: Prefix
-              service:
-                identifier: valetudopng
-                port: http
-      tls:
-        - hosts:
-            - *host
-          secretName: hass-valetudopng-tls-certificate
+      - hosts:
+        - *host
+        secretName: hass-appdaemon-tls-certificate
+
 
   persistence:
     config:
@@ -325,7 +280,7 @@ app-template:
       advancedMounts:
         hass:
           hass:
-            - path: /config
+          - path: /config
     configmap:
       enabled: true
       type: configMap
@@ -333,7 +288,7 @@ app-template:
       advancedMounts:
         hass:
           hass:
-            - path: /config/gitops
+          - path: /config/gitops
     secret:
       enabled: true
       type: secret
@@ -341,7 +296,7 @@ app-template:
       advancedMounts:
         hass:
           hass:
-            - path: /config/gitops/secrets
+          - path: /config/gitops/secrets
     configmap-integrations:
       enabled: true
       type: configMap
@@ -349,7 +304,7 @@ app-template:
       advancedMounts:
         hass:
           hass:
-            - path: /config/gitops/integrations
+          - path: /config/gitops/integrations
     configmap-script:
       enabled: true
       type: configMap
@@ -357,7 +312,7 @@ app-template:
       advancedMounts:
         hass:
           hass:
-            - path: /config/gitops/script
+          - path: /config/gitops/script
     appdaemon:
       enabled: true
       type: configMap
@@ -365,7 +320,7 @@ app-template:
       advancedMounts:
         appdaemon:
           01-init-config:
-            - path: /original/conf
+          - path: /original/conf
     appdaemon-apps:
       enabled: true
       type: configMap
@@ -373,15 +328,15 @@ app-template:
       advancedMounts:
         appdaemon:
           01-init-config:
-            - path: /original/conf/apps
+          - path: /original/conf/apps
     appdaemon-cache:
       type: emptyDir
       advancedMounts:
         appdaemon:
           01-init-config:
-            - path: /conf
+          - path: /conf
           appdaemon:
-            - path: /conf
+          - path: /conf
     whisper:
       enabled: true
       type: emptyDir
@@ -389,7 +344,7 @@ app-template:
       advancedMounts:
         whisper:
           whisper:
-            - path: /data
+          - path: /data
     piper:
       enabled: true
       type: emptyDir
@@ -397,15 +352,7 @@ app-template:
       advancedMounts:
         piper:
           piper:
-            - path: /data
-    valetudopng:
-      enabled: true
-      type: secret
-      name: valetudopng-config
-      advancedMounts:
-        valetudopng:
-          valetudopng:
-            - path: /config
+          - path: /data
   serviceMonitor:
     hass:
       enabled: true
@@ -416,6 +363,6 @@ app-template:
       labels:
         operator.prometheus.io/instance: prometheus-long-term
       endpoints:
-        - port: http
-          scheme: http
-          path: /api/prometheus
+      - port: http
+        scheme: http
+        path: /api/prometheus
