--- a/apps/navidrome/values.yaml
+++ b/apps/navidrome/values.yaml
@@ -73,11 +73,11 @@ app-template:
       className: nginx-external
       annotations:
         external-dns.alpha.kubernetes.io/enabled: "true"
-        external-dns.alpha.kubernetes.io/target: dbcloud.org
+        #external-dns.alpha.kubernetes.io/target: dbcloud.org
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
-        nginx.ingress.kubernetes.io/auth-url: https://auth.dbcloud.org/oauth2/auth
-        nginx.ingress.kubernetes.io/auth-signin: https://auth.dbcloud.org/oauth2/start
-        nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-Preferred-Username"
+        #nginx.ingress.kubernetes.io/auth-url: https://auth.dbcloud.org/oauth2/auth
+        #nginx.ingress.kubernetes.io/auth-signin: https://auth.dbcloud.org/oauth2/start
+        #nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-Preferred-Username"
       hosts:
       - host: &host navidrome.dbcloud.org
         paths:
