--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -84,9 +84,9 @@ app-template:
       className: nginx-external
       annotations:
         external-dns.alpha.kubernetes.io/enabled: "true"
-        external-dns.alpha.kubernetes.io/target: dbcloud.org
+        #external-dns.alpha.kubernetes.io/target: dbcloud.org
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
-        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+        #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
       hosts:
       - host: &host idm.dbcloud.org
         paths:
@@ -98,7 +98,7 @@ app-template:
       tls:
       - hosts:
         - *host
-        - ldaps.idm.internal.dbcloud.org
+        #- ldaps.idm.internal.dbcloud.org
         secretName: idm-external-tls-certificate
 
   defaultPodOptions:
