--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -81,6 +81,25 @@ app-template:
   ingress:
     kanidmd:
       enabled: true
+      className: nginx-internal
+      annotations:
+        external-dns.alpha.kubernetes.io/enabled: "true"
+        cert-manager.io/cluster-issuer: letsencrypt-prod-dns
+      hosts:
+      - host: &host kanidmd.internal.dbcloud.org
+        paths:
+        - path: /
+          pathType: Prefix
+          service:
+            identifier: kanidmd
+            port: http
+      tls:
+      - hosts:
+        - *host
+        secretName: kanidmd-tls-certificate
+
+    external:
+      enabled: true
       className: nginx-external
       annotations:
         external-dns.alpha.kubernetes.io/enabled: "true"
