--- a/apps/jellyfin/values.yaml
+++ b/apps/jellyfin/values.yaml
@@ -71,7 +71,7 @@ app-template:
       className: nginx-external
       annotations:
         external-dns.alpha.kubernetes.io/enabled: "true"
-        external-dns.alpha.kubernetes.io/target: dbcloud.org
+        #external-dns.alpha.kubernetes.io/target: dbcloud.org
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
       hosts:
       - host: &host jellyfin.dbcloud.org
