--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -105,7 +105,7 @@ app-template:
         external-dns.alpha.kubernetes.io/enabled: "true"
         #external-dns.alpha.kubernetes.io/target: dbcloud.org
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
-        #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
       hosts:
       - host: &host idm.dbcloud.org
         paths:
