--- a/system/external-dns/values.yaml
+++ b/system/external-dns/values.yaml
@@ -11,7 +11,7 @@ external-dns:
   extraArgs:
   - --annotation-filter=external-dns.alpha.kubernetes.io/enabled in (true)
   # policy sync for fully handle the domain
-  #policy: upsert-only
+  policy: upsert-only
 
   sources:
   - service
