--- a/system/kanidm/values.yaml
+++ b/system/kanidm/values.yaml
@@ -70,7 +70,7 @@ app-template:
       annotations:
         metallb.universe.tf/loadBalancerIPs: "192.168.1.243"
         external-dns.alpha.kubernetes.io/enabled: "true"
-        #external-dns.alpha.kubernetes.io/hostname: ldaps.idm.internal.dbcloud.org
+        external-dns.alpha.kubernetes.io/hostname: ldaps.idm.internal.dbcloud.org
       externalTrafficPolicy: Local
       ports:
         ldaps:
