--- a/apps/navidrome/values.yaml
+++ b/apps/navidrome/values.yaml
@@ -122,7 +122,7 @@ app-template:
       type: hostPath
       hostPath: /datasets/music
       globalMounts:
-      - path: /datasets/music
+      - path: /music
         readOnly: true
 
     data:
