--- a/apps/home-assistant/values.yaml
+++ b/apps/home-assistant/values.yaml
@@ -43,61 +43,61 @@ app-template:
             limits:
               memory: 1Gi
 
-    appdaemon:
-      annotations:
-        reloader.stakater.com/auto: "true"
-      type: deployment
-      replicas: 1
-      initContainers:
-        01-init-config:
-          image:
-            repository: debian
-            tag: 12.5-slim
-          command:
-          - /bin/sh
-          - -c
-          args:
-          - >
-            cp -r /original/conf/* /conf/
-      containers:
-        appdaemon:
-          image:
-            repository: acockburn/appdaemon
-            tag: 4.4.2
-          env:
-            HA_URL: http://home-assistant-hass:8123
-            DASH_URL: https://appdaemon.dbcloud.org
-            TIMEZONE: Europe/Madrid
-          envFrom:
-          - secretRef:
-              name: hass-appdaemon
-          resources:
-            requests:
-              cpu: 30m
-              memory: 50Mi
-            limits:
-              memory: 200Mi
-          probes:
-            liveness:
-              enabled: true
-            readiness:
-              enabled: true
-            startup:
-              enabled: true
-              spec:
-                failureThreshold: 30
-                periodSeconds: 5
-      pod:
-        affinity: &affinity
-          podAffinity:
-            requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchExpressions:
-                - key: app.kubernetes.io/name
-                  operator: In
-                  values:
-                  - home-assistant
-              topologyKey: kubernetes.io/hostname
+    #appdaemon:
+    #  annotations:
+    #    reloader.stakater.com/auto: "true"
+    #  type: deployment
+    #  replicas: 1
+    #  initContainers:
+    #    01-init-config:
+    #      image:
+    #        repository: debian
+    #        tag: 12.5-slim
+    #      command:
+    #      - /bin/sh
+    #      - -c
+    #      args:
+    #      - >
+    #        cp -r /original/conf/* /conf/
+    #  containers:
+    #    appdaemon:
+    #      image:
+    #        repository: acockburn/appdaemon
+    #        tag: 4.4.2
+    #      env:
+    #        HA_URL: http://home-assistant-hass:8123
+    #        DASH_URL: https://appdaemon.dbcloud.org
+    #        TIMEZONE: Europe/Madrid
+    #      envFrom:
+    #      - secretRef:
+    #          name: hass-appdaemon
+    #      resources:
+    #        requests:
+    #          cpu: 30m
+    #          memory: 50Mi
+    #        limits:
+    #          memory: 200Mi
+    #      probes:
+    #        liveness:
+    #          enabled: true
+    #        readiness:
+    #          enabled: true
+    #        startup:
+    #          enabled: true
+    #          spec:
+    #            failureThreshold: 30
+    #            periodSeconds: 5
+    #  pod:
+    #    affinity: &affinity
+    #      podAffinity:
+    #        requiredDuringSchedulingIgnoredDuringExecution:
+    #        - labelSelector:
+    #            matchExpressions:
+    #            - key: app.kubernetes.io/name
+    #              operator: In
+    #              values:
+    #              - home-assistant
+    #          topologyKey: kubernetes.io/hostname
 
     whisper:
       type: deployment
@@ -245,27 +245,27 @@ app-template:
       - hosts:
         - *host
         secretName: home-assistant-external-tls-certificate
-    appdaemon:
-      enabled: true
-      className: nginx-external
-      annotations:
-        external-dns.alpha.kubernetes.io/enabled: "true"
-        external-dns.alpha.kubernetes.io/target: dbcloud.org
-        cert-manager.io/cluster-issuer: letsencrypt-prod-dns
-        nginx.ingress.kubernetes.io/auth-url: https://auth.dbcloud.org/oauth2/auth
-        nginx.ingress.kubernetes.io/auth-signin: https://auth.dbcloud.org/oauth2/start
-      hosts:
-      - host: &host appdaemon.dbcloud.org
-        paths:
-        - path: /
-          pathType: Prefix
-          service:
-            identifier: appdaemon
-            port: http
-      tls:
-      - hosts:
-        - *host
-        secretName: hass-appdaemon-tls-certificate
+    #appdaemon:
+    #  enabled: true
+    #  className: nginx-external
+    #  annotations:
+    #    external-dns.alpha.kubernetes.io/enabled: "true"
+    #    external-dns.alpha.kubernetes.io/target: dbcloud.org
+    #    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
+    #    nginx.ingress.kubernetes.io/auth-url: https://auth.dbcloud.org/oauth2/auth
+    #    nginx.ingress.kubernetes.io/auth-signin: https://auth.dbcloud.org/oauth2/start
+    #  hosts:
+    #  - host: &host appdaemon.dbcloud.org
+    #    paths:
+    #    - path: /
+    #      pathType: Prefix
+    #      service:
+    #        identifier: appdaemon
+    #        port: http
+    #  tls:
+    #  - hosts:
+    #    - *host
+    #    secretName: hass-appdaemon-tls-certificate
 
 
   persistence:
@@ -308,30 +308,30 @@ app-template:
         hass:
           hass:
           - path: /config/gitops/script
-    appdaemon:
-      enabled: true
-      type: configMap
-      name: hass-appdaemon
-      advancedMounts:
-        appdaemon:
-          01-init-config:
-          - path: /original/conf
-    appdaemon-apps:
-      enabled: true
-      type: configMap
-      name: hass-appdaemon-apps
-      advancedMounts:
-        appdaemon:
-          01-init-config:
-          - path: /original/conf/apps
-    appdaemon-cache:
-      type: emptyDir
-      advancedMounts:
-        appdaemon:
-          01-init-config:
-          - path: /conf
-          appdaemon:
-          - path: /conf
+    #appdaemon:
+    #  enabled: true
+    #  type: configMap
+    #  name: hass-appdaemon
+    #  advancedMounts:
+    #    appdaemon:
+    #      01-init-config:
+    #      - path: /original/conf
+    #appdaemon-apps:
+    #  enabled: true
+    #  type: configMap
+    #  name: hass-appdaemon-apps
+    #  advancedMounts:
+    #    appdaemon:
+    #      01-init-config:
+    #      - path: /original/conf/apps
+    #appdaemon-cache:
+    #  type: emptyDir
+    #  advancedMounts:
+    #    appdaemon:
+    #      01-init-config:
+    #      - path: /conf
+    #      appdaemon:
+    #      - path: /conf
     whisper:
       enabled: true
       type: emptyDir
