--- a/apps/immich/values.yaml
+++ b/apps/immich/values.yaml
@@ -61,7 +61,6 @@ app-template:
     microservices:
       strategy: RollingUpdate
       pod:
-        !!merge <<: *pod
         runtimeClassName: nvidia
       containers:
         main:
@@ -70,7 +69,6 @@ app-template:
           args:
           - ./start-microservices.sh
           env:
-            !!merge <<: *env
             TZ: Europe/Madrid
             NVIDIA_VISIBLE_DEVICES: all
           envFrom: *envFrom
@@ -87,7 +85,6 @@ app-template:
     ml:
       strategy: RollingUpdate
       pod:
-        !!merge <<: *pod
         runtimeClassName: nvidia
       containers:
         main:
@@ -95,7 +92,6 @@ app-template:
             repository: ghcr.io/immich-app/immich-machine-learning
             tag: v1.102.3
           env:
-            !!merge <<: *env
             NVIDIA_VISIBLE_DEVICES: all
             MPLCONFIGDIR: /.config/matplotlib
           envFrom: *envFrom
@@ -181,7 +177,7 @@ app-template:
       className: nginx-external
       annotations:
         external-dns.alpha.kubernetes.io/enabled: "true"
-        #external-dns.alpha.kubernetes.io/target: dbcloud.org
+        external-dns.alpha.kubernetes.io/target: dbcloud.org
         cert-manager.io/cluster-issuer: letsencrypt-prod-dns
         nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
         nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
