--- a/apps/transcoder/templates/external-secret.yaml
+++ b/apps/transcoder/templates/external-secret.yaml
@@ -33,7 +33,7 @@ spec:
           scheduler:
             downloadPath: /
             uploadPath: /
-            domain: https://transcoder.internal.grigri.cloud
+            domain: https://transcoder.internal.dbcloud.org
   data:
     - secretKey: rabbit_username
       remoteRef:
