--- a/apps/transcoder/values.yaml
+++ b/apps/transcoder/values.yaml
@@ -97,12 +97,9 @@ app-template:
       controller: rabbit
       type: LoadBalancer
       annotations:
-        # Cilium v1.16+
-        lbipam.cilium.io/ips: "192.168.193.3"
-        # Cilium v1.15
-        io.cilium/lb-ipam-ips: "192.168.193.3"
+        metallb.universe.tf/loadBalancerIPs: "192.168.1.237"
         external-dns.alpha.kubernetes.io/enabled: "true"
-        external-dns.alpha.kubernetes.io/hostname: transcoder-rabbit.internal.grigri.cloud
+        external-dns.alpha.kubernetes.io/hostname: transcoder-rabbit.internal.dbcloud.org
       externalTrafficPolicy: Local
       ports:
         tcp-clients:
@@ -125,17 +122,17 @@ app-template:
         nginx.ingress.kubernetes.io/proxy-buffering: "off"
         nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
       hosts:
-        - host: &host transcoder.internal.grigri.cloud
-          paths:
-            - path: /
-              pathType: Prefix
-              service:
-                identifier: transcoder
-                port: http
+      - host: &host transcoder.internal.dbcloud.org
+        paths:
+        - path: /
+          pathType: Prefix
+          service:
+            identifier: transcoder
+            port: http
       tls:
-        - hosts:
-            - *host
-          secretName: transcoder-tls-certificate
+      - hosts:
+        - *host
+        secretName: transcoder-tls-certificate
 
   defaultPodOptions:
     securityContext:
@@ -143,9 +140,6 @@ app-template:
       runAsGroup: 501
       fsGroup: 501
       fsGroupChangePolicy: "OnRootMismatch"
-
-    nodeSelector:
-      name: grigri
 
   persistence:
     config:
@@ -155,7 +149,7 @@ app-template:
       advancedMounts:
         transcoder:
           transcoder:
-            - path: /etc/transcoder/
+          - path: /etc/transcoder/
     series:
       enabled: true
       type: hostPath
@@ -163,7 +157,7 @@ app-template:
       advancedMounts:
         transcoder:
           transcoder:
-            - path: /datasets/series
+          - path: /datasets/series
     peliculas:
       enabled: true
       type: hostPath
@@ -171,14 +165,14 @@ app-template:
       advancedMounts:
         transcoder:
           transcoder:
-            - path: /datasets/peliculas
+          - path: /datasets/peliculas
     transcode:
       enabled: true
       type: emptyDir
       advancedMounts:
         transcoder:
           transcoder:
-            - path: /tmp
+          - path: /tmp
     rabbit:
       enabled: true
       type: persistentVolumeClaim
@@ -187,4 +181,4 @@ app-template:
       advancedMounts:
         rabbit:
           rabbitmq:
-            - path: /var/lib/rabbitmq
+          - path: /var/lib/rabbitmq
