add music volume to qbittorrent

--- a/apps/qbittorrent/values.yaml
+++ b/apps/qbittorrent/values.yaml
@@ -157,6 +157,13 @@ app-template:
       globalMounts:
       - path: /datasets/peliculas/download
 
+    music:
+      enabled: true
+      type: hostPath
+      hostPath: /datasets/music/download
+      globalMounts:
+      - path: /datasets/music/download
+
     download:
       enabled: true
       type: hostPath
