change to google auth

--- a/system/oauth2-proxy/templates/external-secrets.yaml
+++ b/system/oauth2-proxy/templates/external-secrets.yaml
@@ -11,12 +11,12 @@ spec:
   data:
     - secretKey: client-id
       remoteRef:
-        key: /oauth2-proxy/client
-        property: id
+        key: /oauth2-proxy/google
+        property: client-id
     - secretKey: client-secret
       remoteRef:
-        key: /oauth2-proxy/client
-        property: secret
+        key: /oauth2-proxy/google
+        property: client-secret
     - secretKey: cookie-secret
       remoteRef:
         key: /oauth2-proxy/cookie
